# esp32_lua_glue

./: README.md  boot.lc  partitions.csv
components/esp_littlefs/: CMakeLists.txt
components/esp_littlefs/include/: esp_littlefs.h
components/libssh/: CMakeLists.txt
components/lua-401/: CMakeLists.txt
components/lua-401_data_libraries/: CMakeLists.txt
components/lua-401_data_libraries/arithmetic/: datalib_arithmetic.c  datalib_arithmetic.h
components/lua-401_data_libraries/bit_shift/: datalib_bit_shift.c  datalib_bit_shift.h
components/lua-401_data_libraries/bitwise_boolean/: datalib_bitwise_boolean.c  datalib_bitwise_boolean.h
components/lua-401_data_libraries/comparison/: datalib_comparison.c  datalib_comparison.h
components/lua-401_data_libraries/conversion/: datalib_conversion.c  datalib_conversion.h
components/lua-401_data_libraries/core/: datalib_core.c  datalib_core.h
components/lua-401_data_libraries/date_time/: datalib_date_time.c  datalib_date_time.h
components/lua-401_data_libraries/mathematical/: datalib_mathematical.c  datalib_mathematical.h
components/lua-401_data_libraries/selection/: datalib_selection.c  datalib_selection.h
components/lua-401_data_libraries/string/: datalib_string.c  datalib_string.h
components/lua-401_data_libraries/system/: datalib_system.c  datalib_system.h
components/lua-401_data_libraries/validation/: datalib_validation.c  datalib_validation.h
luac/: Makefile  dump.c  lua-401_port.h  lua_common.h  luac.c  luac.h  opt.c  print.c  print.h  stubs.c
main/: CMakeLists.txt  main.c
temp/: uart.h
(+81 files in other folders)
